Apply RealGo Patches